--- a/ImageProc/src/ImageProc/imgproc.ui
+++ b/ImageProc/src/ImageProc/imgproc.ui
@@ -6,24 +6,37 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>899</width>
+    <height>650</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QPushButton" name="testBtn">
+  <widget class="QPushButton" name="convBtn">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>190</y>
-     <width>89</width>
-     <height>25</height>
+     <x>560</x>
+     <y>590</y>
+     <width>91</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string>Convert</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="showImageLbl">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>40</y>
+     <width>512</width>
+     <height>512</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
